--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+
+
 #players-div, #player-details{
     background-color: lightblue;
     padding: 30px;
     text-align: center;
     margin: 5px;
 }
+ 
+#spinner {
+    display: none;
+} 
